Add html structure

--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <title>Homepage</title>
   </head>
   <body>
-    
+    <header>
+      <div></div>
+      <img src="" alt="">
+      <div></div>
+    </header>
+    <main>
+      <h1>My work</h1>
+      <section class="projects">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </section>
+    </main>
+    <footer>
+      <div></div>
+      <img src="" alt="">
+    </footer>
   </body>
 </html>
