Add content to main section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
       <div class="diagonal-box"></div>
       <img src="images/placeholder.png" alt="Developer">
-      <h1 class="name">Name Last Name</h1>
+      <h1 class="name">John Smith</h1>
       <div class="about-me">
         <h1>About Me</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
@@ -27,12 +27,84 @@
     <main>
       <h1>My work</h1>
       <section class="projects">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div>
+          <h1>screenshot of project</h1>
+          <div>
+            <div>
+              <h2>Project name</h2>
+              <div>
+                <i class="fa-brands fa-github"></i>
+                <i class="fa-solid fa-arrow-up-right-from-square"></i>
+              </div>
+            </div>
+            <p>Short description of the project. Just a couple sentences will do.</p>
+          </div>
+        </div>
+        <div>
+          <h1>screenshot of project</h1>
+          <div>
+            <div>
+              <h2>Project name</h2>
+              <div>
+                <i class="fa-brands fa-github"></i>
+                <i class="fa-solid fa-arrow-up-right-from-square"></i>
+              </div>
+            </div>
+            <p>Short description of the project. Just a couple sentences will do.</p>
+          </div>
+        </div>
+        <div>
+          <h1>screenshot of project</h1>
+          <div>
+            <div>
+              <h2>Project name</h2>
+              <div>
+                <i class="fa-brands fa-github"></i>
+                <i class="fa-solid fa-arrow-up-right-from-square"></i>
+              </div>
+            </div>
+            <p>Short description of the project. Just a couple sentences will do.</p>
+          </div>
+        </div>
+        <div>
+          <h1>screenshot of project</h1>
+          <div>
+            <div>
+              <h2>Project name</h2>
+              <div>
+                <i class="fa-brands fa-github"></i>
+                <i class="fa-solid fa-arrow-up-right-from-square"></i>
+              </div>
+            </div>
+            <p>Short description of the project. Just a couple sentences will do.</p>
+          </div>
+        </div>
+        <div>
+          <h1>screenshot of project</h1>
+          <div>
+            <div>
+              <h2>Project name</h2>
+              <div>
+                <i class="fa-brands fa-github"></i>
+                <i class="fa-solid fa-arrow-up-right-from-square"></i>
+              </div>
+            </div>
+            <p>Short description of the project. Just a couple sentences will do.</p>
+          </div>
+        </div>
+        <div>
+          <h1>screenshot of project</h1>
+          <div>
+            <div>
+              <h2>Project name</h2>
+              <div>
+                <i class="fa-brands fa-github"></i>
+                <i class="fa-solid fa-arrow-up-right-from-square"></i>
+              </div>
+            </div>
+            <p>Short description of the project. Just a couple sentences will do.</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
