--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
     <main>
       <h1>My work</h1>
       <section class="projects">
-        <div>
-          <h1>screenshot of project</h1>
-          <div>
+        <div class="card">
+          <h1 class="one">screenshot of project</h1>
+          <div class="inner-div">
             <div>
-              <h2>Project name</h2>
-              <div>
+              <p>Project name</p>
+              <div class="project-icons">
                 <i class="fa-brands fa-github"></i>
                 <i class="fa-solid fa-arrow-up-right-from-square"></i>
               </div>
@@ -40,12 +40,12 @@
             <p>Short description of the project. Just a couple sentences will do.</p>
           </div>
         </div>
-        <div>
-          <h1>screenshot of project</h1>
-          <div>
+        <div class="card">
+          <h1 class="two">screenshot of project</h1>
+          <div class="inner-div">
             <div>
-              <h2>Project name</h2>
-              <div>
+              <p class="project-name">Project name</p>
+              <div class="project-icons">
                 <i class="fa-brands fa-github"></i>
                 <i class="fa-solid fa-arrow-up-right-from-square"></i>
               </div>
@@ -53,12 +53,12 @@
             <p>Short description of the project. Just a couple sentences will do.</p>
           </div>
         </div>
-        <div>
-          <h1>screenshot of project</h1>
-          <div>
+        <div class="card">
+          <h1 class="three">screenshot of project</h1>
+          <div class="inner-div">
             <div>
-              <h2>Project name</h2>
-              <div>
+              <p class="project-name">Project name</p>
+              <div class="project-icons">
                 <i class="fa-brands fa-github"></i>
                 <i class="fa-solid fa-arrow-up-right-from-square"></i>
               </div>
@@ -66,12 +66,12 @@
             <p>Short description of the project. Just a couple sentences will do.</p>
           </div>
         </div>
-        <div>
-          <h1>screenshot of project</h1>
-          <div>
+        <div class="card">
+          <h1 class="four">screenshot of project</h1>
+          <div class="inner-div">
             <div>
-              <h2>Project name</h2>
-              <div>
+              <p class="project-name">Project name</p>
+              <div class="project-icons">
                 <i class="fa-brands fa-github"></i>
                 <i class="fa-solid fa-arrow-up-right-from-square"></i>
               </div>
@@ -79,12 +79,12 @@
             <p>Short description of the project. Just a couple sentences will do.</p>
           </div>
         </div>
-        <div>
-          <h1>screenshot of project</h1>
-          <div>
+        <div class="card">
+          <h1 class="five">screenshot of project</h1>
+          <div class="inner-div">
             <div>
-              <h2>Project name</h2>
-              <div>
+              <p class="project-name">Project name</p>
+              <div class="project-icons">
                 <i class="fa-brands fa-github"></i>
                 <i class="fa-solid fa-arrow-up-right-from-square"></i>
               </div>
@@ -92,12 +92,12 @@
             <p>Short description of the project. Just a couple sentences will do.</p>
           </div>
         </div>
-        <div>
-          <h1>screenshot of project</h1>
-          <div>
+        <div class="card">
+          <h1 class="six">screenshot of project</h1>
+          <div class="inner-div">
             <div>
-              <h2>Project name</h2>
-              <div>
+              <p class="project-name">Project name</p>
+              <div class="project-icons">
                 <i class="fa-brands fa-github"></i>
                 <i class="fa-solid fa-arrow-up-right-from-square"></i>
               </div>
