Adjust projects section

--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
       <h1>My work</h1>
       <section class="projects">
         <div class="card">
-          <h1 class="one">screenshot of project</h1>
-          <div class="inner-div">
+          <div class="inner-div one">
+            <h1>screenshot of project</h1>
+          </div>
+          <div class="inner-div-two">
             <div>
               <p>Project name</p>
               <div class="project-icons">
@@ -41,8 +43,10 @@
           </div>
         </div>
         <div class="card">
-          <h1 class="two">screenshot of project</h1>
-          <div class="inner-div">
+          <div class="inner-div two">
+            <h1>screenshot of project</h1>
+          </div>
+          <div class="inner-div-two">
             <div>
               <p class="project-name">Project name</p>
               <div class="project-icons">
@@ -54,8 +58,10 @@
           </div>
         </div>
         <div class="card">
-          <h1 class="three">screenshot of project</h1>
-          <div class="inner-div">
+          <div class="inner-div three">
+            <h1>screenshot of project</h1>
+          </div>
+          <div class="inner-div-two">
             <div>
               <p class="project-name">Project name</p>
               <div class="project-icons">
@@ -67,8 +73,10 @@
           </div>
         </div>
         <div class="card">
-          <h1 class="four">screenshot of project</h1>
-          <div class="inner-div">
+          <div class="inner-div four">
+            <h1>screenshot of project</h1>
+          </div>
+          <div class="inner-div-two">
             <div>
               <p class="project-name">Project name</p>
               <div class="project-icons">
@@ -80,8 +88,10 @@
           </div>
         </div>
         <div class="card">
-          <h1 class="five">screenshot of project</h1>
-          <div class="inner-div">
+          <div class="inner-div five">
+            <h1>screenshot of project</h1>
+          </div>
+          <div class="inner-div-two">
             <div>
               <p class="project-name">Project name</p>
               <div class="project-icons">
@@ -93,8 +103,10 @@
           </div>
         </div>
         <div class="card">
-          <h1 class="six">screenshot of project</h1>
-          <div class="inner-div">
+          <div class="inner-div six">
+            <h1>screenshot of project</h1>
+          </div>
+          <div class="inner-div-two">
             <div>
               <p class="project-name">Project name</p>
               <div class="project-icons">
