Add elements to header section

--- a/index.html
+++ b/index.html
@@ -12,116 +12,21 @@
   <body>
     <header>
       <div class="diagonal-box"></div>
-      <img src="images/placeholder.png" alt="Developer">
-      <h1 class="name">John Smith</h1>
-      <div class="about-me">
-        <h1>About Me</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-        <div>
-          <i class="fa-brands fa-github"></i>
-          <i class="fa-brands fa-linkedin"></i>
-          <i class="fa-brands fa-x-twitter"></i>
+      <div class="container">
+        <div class="img-container">
+          <img class="header-img" src="images/placeholder.jpg" alt="Software Development">
+          <h1>John Smith</h1>
+        </div>
+        <div class="about-me">
+          <h1>About Me</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          <div>
+            <i class="fa-brands fa-github"></i>
+            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-brands fa-x-twitter"></i>
+          </div>
         </div>
       </div>
     </header>
-    <main>
-      <h1>My work</h1>
-      <section class="projects">
-        <div class="card">
-          <div class="inner-div one">
-            <h1>screenshot of project</h1>
-          </div>
-          <div class="inner-div-two">
-            <div>
-              <p>Project name</p>
-              <div class="project-icons">
-                <i class="fa-brands fa-github"></i>
-                <i class="fa-solid fa-arrow-up-right-from-square"></i>
-              </div>
-            </div>
-            <p>Short description of the project. Just a couple sentences will do.</p>
-          </div>
-        </div>
-        <div class="card">
-          <div class="inner-div two">
-            <h1>screenshot of project</h1>
-          </div>
-          <div class="inner-div-two">
-            <div>
-              <p class="project-name">Project name</p>
-              <div class="project-icons">
-                <i class="fa-brands fa-github"></i>
-                <i class="fa-solid fa-arrow-up-right-from-square"></i>
-              </div>
-            </div>
-            <p>Short description of the project. Just a couple sentences will do.</p>
-          </div>
-        </div>
-        <div class="card">
-          <div class="inner-div three">
-            <h1>screenshot of project</h1>
-          </div>
-          <div class="inner-div-two">
-            <div>
-              <p class="project-name">Project name</p>
-              <div class="project-icons">
-                <i class="fa-brands fa-github"></i>
-                <i class="fa-solid fa-arrow-up-right-from-square"></i>
-              </div>
-            </div>
-            <p>Short description of the project. Just a couple sentences will do.</p>
-          </div>
-        </div>
-        <div class="card">
-          <div class="inner-div four">
-            <h1>screenshot of project</h1>
-          </div>
-          <div class="inner-div-two">
-            <div>
-              <p class="project-name">Project name</p>
-              <div class="project-icons">
-                <i class="fa-brands fa-github"></i>
-                <i class="fa-solid fa-arrow-up-right-from-square"></i>
-              </div>
-            </div>
-            <p>Short description of the project. Just a couple sentences will do.</p>
-          </div>
-        </div>
-        <div class="card">
-          <div class="inner-div five">
-            <h1>screenshot of project</h1>
-          </div>
-          <div class="inner-div-two">
-            <div>
-              <p class="project-name">Project name</p>
-              <div class="project-icons">
-                <i class="fa-brands fa-github"></i>
-                <i class="fa-solid fa-arrow-up-right-from-square"></i>
-              </div>
-            </div>
-            <p>Short description of the project. Just a couple sentences will do.</p>
-          </div>
-        </div>
-        <div class="card">
-          <div class="inner-div six">
-            <h1>screenshot of project</h1>
-          </div>
-          <div class="inner-div-two">
-            <div>
-              <p class="project-name">Project name</p>
-              <div class="project-icons">
-                <i class="fa-brands fa-github"></i>
-                <i class="fa-solid fa-arrow-up-right-from-square"></i>
-              </div>
-            </div>
-            <p>Short description of the project. Just a couple sentences will do.</p>
-          </div>
-        </div>
-      </section>
-    </main>
-    <footer>
-      <div></div>
-      <img src="" alt="">
-    </footer>
   </body>
 </html>
