--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     <title>Homepage</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <div class="container">
         <div class="img-container portrait">
           <img src="images/placeholder.jpg" alt="Software Development">
-          <h1>John Smith</h1>
+          <h1 class="name">John Smith</h1>
         </div>
         <div class="about-me">
           <div class="img-container float">
             <img src="images/placeholder.jpg" alt="Software Development">
-            <h1>John Smith</h1>
+            <h1 class="name">John Smith</h1>
           </div>
           <h2>About Me</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam sit eius perferendis nam incidunt! Tenetur repellendus iusto quasi nulla rerum exercitationem pariatur necessitatibus! Consectetur esse eligendi voluptate dolores quae suscipit aliquid, excepturi dignissimos ea magni id facere fugiat nisi, soluta ad totam reiciendis fugit. Porro, neque non corporis veniam aliquam vitae placeat illum quo, ad ratione esse voluptate quae quas voluptatum cum nobis fugiat unde? Recusandae in non aliquam tempora consectetur fugiat id ipsa officiis sequi natus minima unde voluptates impedit error, perferendis iusto distinctio est corrupti odio explicabo eaque autem labore hic quas! Culpa velit vitae quo! Assumenda, nam?</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
           <div class="icons">
             <a href="#">
               <i class="fa-brands fa-github"></i>
