Add elements to projects section

--- a/index.html
+++ b/index.html
@@ -37,5 +37,102 @@
         </div>
       </div>
     </header>
+    <main>
+      <div class="projects-container">
+        <h2>My work</h2>
+        <section class="projects">
+          <div class="card">
+            <div class="inner-div-one">
+              <h2>screenshot of project</h2>
+            </div>
+            <div class="inner-div-two">
+              <div>
+                <h3>Project name</h3>
+                <div class="project-icons">
+                  <i class="fa-brands fa-github"></i>
+                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                </div>
+              </div>
+              <p>Short description of the project. Just a couple sentences will do.</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="inner-div-one">
+              <h2>screenshot of project</h2>
+            </div>
+            <div class="inner-div-two">
+              <div>
+                <h3>Project name</h3>
+                <div class="project-icons">
+                  <i class="fa-brands fa-github"></i>
+                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                </div>
+              </div>
+              <p>Short description of the project. Just a couple sentences will do.</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="inner-div-one">
+              <h2>screenshot of project</h2>
+            </div>
+            <div class="inner-div-two">
+              <div>
+                <h3>Project name</h3>
+                <div class="project-icons">
+                  <i class="fa-brands fa-github"></i>
+                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                </div>
+              </div>
+              <p>Short description of the project. Just a couple sentences will do.</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="inner-div-one">
+              <h2>screenshot of project</h2>
+            </div>
+            <div class="inner-div-two">
+              <div>
+                <h3>Project name</h3>
+                <div class="project-icons">
+                  <i class="fa-brands fa-github"></i>
+                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                </div>
+              </div>
+              <p>Short description of the project. Just a couple sentences will do.</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="inner-div-one">
+              <h2>screenshot of project</h2>
+            </div>
+            <div class="inner-div-two">
+              <div>
+                <h3>Project name</h3>
+                <div class="project-icons">
+                  <i class="fa-brands fa-github"></i>
+                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                </div>
+              </div>
+              <p>Short description of the project. Just a couple sentences will do.</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="inner-div-one">
+              <h2>screenshot of project</h2>
+            </div>
+            <div class="inner-div-two">
+              <div>
+                <h3>Project name</h3>
+                <div class="project-icons">
+                  <i class="fa-brands fa-github"></i>
+                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                </div>
+              </div>
+              <p>Short description of the project. Just a couple sentences will do.</p>
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
   </body>
 </html>
