Style projects section for mobile screens

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
         <h2>My work</h2>
         <section class="projects">
           <div class="card">
-            <div class="inner-div-one">
+            <div class="inner-div-one purple">
               <h2>screenshot of project</h2>
             </div>
             <div class="inner-div-two">
-              <div>
+              <div class="project-name">
                 <h3>Project name</h3>
                 <div class="project-icons">
                   <i class="fa-brands fa-github"></i>
@@ -57,11 +57,11 @@
             </div>
           </div>
           <div class="card">
-            <div class="inner-div-one">
+            <div class="inner-div-one orange">
               <h2>screenshot of project</h2>
             </div>
             <div class="inner-div-two">
-              <div>
+              <div class="project-name">
                 <h3>Project name</h3>
                 <div class="project-icons">
                   <i class="fa-brands fa-github"></i>
@@ -72,11 +72,11 @@
             </div>
           </div>
           <div class="card">
-            <div class="inner-div-one">
+            <div class="inner-div-one green">
               <h2>screenshot of project</h2>
             </div>
             <div class="inner-div-two">
-              <div>
+              <div class="project-name">
                 <h3>Project name</h3>
                 <div class="project-icons">
                   <i class="fa-brands fa-github"></i>
@@ -87,11 +87,11 @@
             </div>
           </div>
           <div class="card">
-            <div class="inner-div-one">
+            <div class="inner-div-one pink">
               <h2>screenshot of project</h2>
             </div>
             <div class="inner-div-two">
-              <div>
+              <div class="project-name">
                 <h3>Project name</h3>
                 <div class="project-icons">
                   <i class="fa-brands fa-github"></i>
@@ -102,11 +102,11 @@
             </div>
           </div>
           <div class="card">
-            <div class="inner-div-one">
+            <div class="inner-div-one blue">
               <h2>screenshot of project</h2>
             </div>
             <div class="inner-div-two">
-              <div>
+              <div class="project-name">
                 <h3>Project name</h3>
                 <div class="project-icons">
                   <i class="fa-brands fa-github"></i>
@@ -117,11 +117,11 @@
             </div>
           </div>
           <div class="card">
-            <div class="inner-div-one">
+            <div class="inner-div-one green">
               <h2>screenshot of project</h2>
             </div>
             <div class="inner-div-two">
-              <div>
+              <div class="project-name">
                 <h3>Project name</h3>
                 <div class="project-icons">
                   <i class="fa-brands fa-github"></i>
