Adjust style for table/desktop design

--- a/index.html
+++ b/index.html
@@ -37,95 +37,119 @@
         </div>
       </div>
     </header>
-    <main>
+    <main class="main">
       <div class="projects-container">
         <h2>My work</h2>
         <section class="projects">
           <div class="card">
-            <div class="inner-div-one purple">
+            <div class="inner-div-one one">
               <h2>screenshot of project</h2>
             </div>
             <div class="inner-div-two">
               <div class="project-name">
                 <h3>Project name</h3>
                 <div class="project-icons">
-                  <i class="fa-brands fa-github"></i>
-                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                  <a href="#">
+                    <i class="fa-brands fa-github"></i>
+                  </a>
+                  <a href="#">
+                    <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                  </a>
                 </div>
               </div>
               <p>Short description of the project. Just a couple sentences will do.</p>
             </div>
           </div>
           <div class="card">
-            <div class="inner-div-one orange">
+            <div class="inner-div-one two">
               <h2>screenshot of project</h2>
             </div>
             <div class="inner-div-two">
               <div class="project-name">
                 <h3>Project name</h3>
                 <div class="project-icons">
-                  <i class="fa-brands fa-github"></i>
-                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                  <a href="#">
+                    <i class="fa-brands fa-github"></i>
+                  </a>
+                  <a href="#">
+                    <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                  </a>
                 </div>
               </div>
               <p>Short description of the project. Just a couple sentences will do.</p>
             </div>
           </div>
           <div class="card">
-            <div class="inner-div-one green">
+            <div class="inner-div-one three">
               <h2>screenshot of project</h2>
             </div>
             <div class="inner-div-two">
               <div class="project-name">
                 <h3>Project name</h3>
                 <div class="project-icons">
-                  <i class="fa-brands fa-github"></i>
-                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                  <a href="#">
+                    <i class="fa-brands fa-github"></i>
+                  </a>
+                  <a href="#">
+                    <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                  </a>  
                 </div>
               </div>
               <p>Short description of the project. Just a couple sentences will do.</p>
             </div>
           </div>
           <div class="card">
-            <div class="inner-div-one pink">
+            <div class="inner-div-one four">
               <h2>screenshot of project</h2>
             </div>
             <div class="inner-div-two">
               <div class="project-name">
                 <h3>Project name</h3>
                 <div class="project-icons">
-                  <i class="fa-brands fa-github"></i>
-                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                  <a href="#">
+                    <i class="fa-brands fa-github"></i>
+                  </a>
+                  <a href="#">
+                    <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                  </a>
                 </div>
               </div>
               <p>Short description of the project. Just a couple sentences will do.</p>
             </div>
           </div>
           <div class="card">
-            <div class="inner-div-one blue">
+            <div class="inner-div-one five">
               <h2>screenshot of project</h2>
             </div>
             <div class="inner-div-two">
               <div class="project-name">
                 <h3>Project name</h3>
                 <div class="project-icons">
-                  <i class="fa-brands fa-github"></i>
-                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                  <a href="#">
+                    <i class="fa-brands fa-github"></i>
+                  </a>
+                  <a href="#">
+                    <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                  </a>
                 </div>
               </div>
               <p>Short description of the project. Just a couple sentences will do.</p>
             </div>
           </div>
           <div class="card">
-            <div class="inner-div-one green">
+            <div class="inner-div-one six">
               <h2>screenshot of project</h2>
             </div>
             <div class="inner-div-two">
               <div class="project-name">
                 <h3>Project name</h3>
                 <div class="project-icons">
-                  <i class="fa-brands fa-github"></i>
-                  <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                  <a href="#">
+                    <i class="fa-brands fa-github"></i>
+                  </a>
+                  <a href="#">
+                    <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                  </a>
                 </div>
               </div>
               <p>Short description of the project. Just a couple sentences will do.</p>
