--- a/index.html
+++ b/index.html
@@ -158,5 +158,28 @@
         </section>
       </div>
     </main>
+    <footer class="footer">
+      <div class="footer-container">
+        <div>
+          <h2>Contact</h2>
+          <p>Please get in touch if you think our work could be mutually beneficial!</p>
+          <p>1234 Random Road<br>Random Town, California 12345</p>
+          <p><i class="fa-solid fa-phone"></i>555-555-5555</p>
+          <p><i class="fa-regular fa-envelope"></i>johnsmith.is.not.real@gmail.com</p>
+          <div class="footer-icons">
+            <a href="#">
+              <i class="fa-brands fa-github"></i>
+            </a>
+            <a href="#">
+              <i class="fa-brands fa-linkedin"></i>
+            </a>
+            <a href="#">
+              <i class="fa-brands fa-x-twitter"></i>
+            </a>
+          </div>
+        </div>
+        <img src="images/placeholder2.jpg" alt="Software Developer">
+      </div>
+    </footer>
   </body>
 </html>
