--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
     </main>
     <footer class="footer">
       <div class="footer-container">
-        <div>
-          <h2>Contact</h2>
+        <div class="contact-me">
+          <h2>Contact me</h2>
           <p>Please get in touch if you think our work could be mutually beneficial!</p>
           <p>1234 Random Road<br>Random Town, California 12345</p>
           <p><i class="fa-solid fa-phone"></i>555-555-5555</p>
