Style footer for desktop design

--- a/index.html
+++ b/index.html
@@ -178,7 +178,9 @@
             </a>
           </div>
         </div>
+        <div class="footer-img-container">
           <img src="images/placeholder2.jpg" alt="Software Developer">
+        </div>
       </div>
     </footer>
   </body>
